# BCHeritage_arches

./: .gitignore  COMPLIANCE.yaml  README.md
src/bcrhp/: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  dot.env.j2  gettext.config.js  manage.py  package.json  pyproject.toml  vitest.config.mts  vitest.setup.mts
src/bcrhp/.github/workflows/: main.yml
src/bcrhp/bcrhp/: apps.py  celery.py  hosts.py  package.json  package_settings.py  settings.py  urls.py  wsgi.py
src/bcrhp/bcrhp/datatypes/: borden_number_datatype.py
src/bcrhp/bcrhp/functions/: admin_only_access.py  bcrhp_site_descriptors.py  bcrhp_site_submission_descriptors.py  restricted_site_access.py
src/bcrhp/bcrhp/migrations/: 0001_add_crhp_export_view.py  0001_initial.py  0002_alter_crhpexportdata_table.py  0002_initial.py  0003_create_databc_proxy_role.py  0004_historic_site_one_line.py  0005_remove_map_layers_665.py  0006_update_map_layer_665.py  0007_add_map_layers_665.py  0008_public_interal_map_layers_665.py  0008_public_internal_map_layers_665.py  0009_reorder_map_layers_665.py  1034_fix_file_urls.py  1036_update_heritage_site_export_config.py  1044_disable_download_email_notifications.py  1075_fix_null_sortorder.py  1081_add_missing_featureids.py  1081_drop_materialized_views.py  1081_recreate_materialized_views.py  1108_fix_null_card_sortorder.py  1111_add_missing_submission_documents_config.py  (+33 more)
src/bcrhp/docker/: entrypoint.sh  env_file.env  project_name-supervisor.conf  settings_docker.py  settings_local.py
src/bcrhp/tests/: test_settings.py
(+816 files in other folders)
